# sqlite-parquet-vtable

./: .gitattributes  .gitignore  README.md  build.bat  build.sh
dll/: .clang-format  ParquetSQLite.sln  ParquetSQLite.vcxproj  dllmain.cpp
managed/: ParquetSQLiteTool.sln  Program.cs
src/: CMakeLists.txt  CMakeSettings.json  api.h  parquet.cpp  parquet_cursor.cpp  parquet_cursor.h  parquet_filter.cpp  parquet_filter.h  parquet_table.cpp  parquet_table.h
